2009-02-04  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #10352: htmlARea RTE: Shift+Enter raises exception in Safari
	* Fixed bug #10353: htmlArea RTE: Colouring features should check if style attribute is allowed
	* Fixed bug #10354: htmlArea RTE: Definition List extension must require the Block Elements extension

2009-02-04  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #10351: Whitespace cleanups in t3lib_frontendedit

2009-02-04  Ingo Renner  <ingo@typo3.org>

	* Added feature #4911: Add an option to add alternative external URL or shortcut for other languages

2009-02-03  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up for bug #10326: htmlArea RTE: Cleaning on paste broken in older versions of Mozilla/Firefox
	* Fixed bug #9894: htmlArea RTE: copy/cut/paste with hotkeys does not work in some browsers/settings
	* Fixed bug #10337: htmlArea RTE: Allow Clipboard Helper does not work with Firefox 3
	* Added feature #10339: htmlArea RTE: Move editing mode change to plugin

2009-02-03  Francois Suter  <francois@typo3.org>

	* Fixed bug #1527: t3lib_svbase: Method init returns wrong value  (thanks to Stefano Kowalke and Michael Miousse)

2009-02-03  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #9600: Frontend Edit Panel is not compatible with subdomains and RealURL (thanks to Xavier Perseguers)
	* Added feature #10155: Add controller switching for frontend editing

2009-02-03  Ingo Renner  <ingo@typo3.org>

	* Changed the pages description field from a one line input to a textarea

2009-02-02  Ingo Renner  <ingo@typo3.org>

	* Fixed order of fields in TCEforms for table pages, type external URL which was inconsitant to the other types

2009-02-01  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #10323: htmlArea RTE: hotkey CTRL+0 is not honoured
	* Fixed bug #10324: htmlArea RTE: Configured hotkeys are not honoured in Safari
 	* Added feature #10325: htmlArea RTE: Make hotkey for enableWordClean feature configurable